--- a/style.scss
+++ b/style.scss
@@ -149,8 +149,8 @@ a {
     }
 
     img {
-        width: 100%;
-        // height: auto;
+        width: 100px;
+        height: 100px;
     }
 }
 
